objects/Apttus_DocuApi__DocuSignDefaultRecipient2__c.object
<CustomObject>
    <description>Holds the default recipients for e-signature.</description>
    <fields>
        <fullName>Apttus_CMDSign__AgreementId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated agreement</description>
        <inlineHelpText>ID of the associated agreement</inlineHelpText>
        <label>Agreement</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipName>DocuSignDefaultRecipients2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_DocuApi__ContactId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the contact recipient</description>
        <inlineHelpText>ID of the contact recipient</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>DocuSignDefaultRecipients2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_DocuApi__EmailTemplateUniqueName__c</fullName>
        <description>The &quot;Template Unique Name&quot; for the Salesforce text email template that needs to be used for the email subject and email body for the recipient. Only &quot;Text&quot; template type is supported.</description>
        <inlineHelpText>The &quot;Template Unique Name&quot; for the Salesforce text email template that needs to be used for the email subject and email body for the recipient. Only &quot;Text&quot; template type is supported.</inlineHelpText>
        <label>Email Template Unique Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_DocuApi__Email__c</fullName>
        <description>Recipient Email Address</description>
        <inlineHelpText>Recipient Email Address</inlineHelpText>
        <label>Recipient Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Apttus_DocuApi__FirstName__c</fullName>
        <description>Recipient First Name</description>
        <inlineHelpText>Recipient First Name</inlineHelpText>
        <label>Recipient First Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_DocuApi__IsRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, users will not be able to remove the recipient on the user interface.</description>
        <inlineHelpText>If checked, users will not be able to remove the recipient on the user interface.</inlineHelpText>
        <label>Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_DocuApi__IsTransient__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates a transient recipient record that may get deleted by the user. A new recipient is in transient state until the recipient is explicitly saved by the user. A new recipient is created by new and clone methods. Workflow rules should check this field to test for false before firing so that rules are not incorrectly fired when transient recipients are created .</description>
        <inlineHelpText>Indicates a transient recipient that may get deleted by the user. A new recipient is in transient state until the recipient is explicitly saved by the user.</inlineHelpText>
        <label>IsTransient</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_DocuApi__LastName__c</fullName>
        <description>Recipient Last Name</description>
        <inlineHelpText>Recipient Last Name</inlineHelpText>
        <label>Recipient Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_DocuApi__ReadOnlyEmail__c</fullName>
        <description>Email</description>
        <formula>IF( (ISBLANK(Apttus_DocuApi__SigningGroupId__c )) ,
IF( (ISBLANK(Apttus_DocuApi__ContactId__c )) ,
IF( (ISBLANK( Apttus_DocuApi__UserId__c )) , Apttus_DocuApi__Email__c
, Apttus_DocuApi__UserId__r.Email

),
Apttus_DocuApi__ContactId__r.Email
),
$Label.Apttus_DocuApi__SigningGroupEmailPlaceholder
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Email</inlineHelpText>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_DocuApi__ReadOnlyFirstName__c</fullName>
        <formula>IF( (ISBLANK(Apttus_DocuApi__SigningGroupId__c )) ,
IF( (ISBLANK(Apttus_DocuApi__ContactId__c )) ,
IF( (ISBLANK( Apttus_DocuApi__UserId__c )) , Apttus_DocuApi__FirstName__c
, Apttus_DocuApi__UserId__r.FirstName

),
Apttus_DocuApi__ContactId__r.FirstName
),
Apttus_DocuApi__SigningGroupId__r.Name
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_DocuApi__ReadOnlyLastName__c</fullName>
        <formula>IF( (ISBLANK(Apttus_DocuApi__ContactId__c )) ,
IF( (ISBLANK( Apttus_DocuApi__UserId__c )) , Apttus_DocuApi__LastName__c
, Apttus_DocuApi__UserId__r.LastName

),
Apttus_DocuApi__ContactId__r.LastName
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_DocuApi__RecipientType__c</fullName>
        <description>Recipient Type list will come from UI</description>
        <inlineHelpText>Recipient Type list will come from UI</inlineHelpText>
        <label>Recipient Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Signer</fullName>
                    <default>true</default>
                    <label>Signer</label>
                </value>
                <value>
                    <fullName>Carbon Copy</fullName>
                </value>
                <value>
                    <fullName>In Person Signer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_DocuApi__RoleName__c</fullName>
        <description>Role names are used to map the anchor tags within your documents to a recipient. Each role name must be entered on a separate line. Order of the role name determines which anchor tag set to map to. The first role in the list will map to the &apos;1&apos; tags within the document, second role to the &apos;2&apos; tags, etc. Example: If the first role is &apos;Signer 1&apos;, the recipient tied to the role will map to the \s1\, \i1\ etc. tags in the documents.</description>
        <inlineHelpText>Role names are used to map the anchor tags within your documents to a recipient. Order of the role name determines which anchor tag set to map to.</inlineHelpText>
        <label>Role Name</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Apttus_DocuApi__RecipientType__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Signer 1</fullName>
                </value>
                <value>
                    <fullName>Signer 2</fullName>
                </value>
                <value>
                    <fullName>Signer 3</fullName>
                </value>
                <value>
                    <fullName>Signer 4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_DocuApi__SigningGroupId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the signing group recipient</description>
        <inlineHelpText>ID of the signing group recipient</inlineHelpText>
        <label>Signing Group</label>
        <referenceTo>Apttus_DocuApi__DocuSignSigningGroup__c</referenceTo>
        <relationshipLabel>DocuSign Recipients</relationshipLabel>
        <relationshipName>DocuSignRecipients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_DocuApi__SigningOrder__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Routing Order default</description>
        <inlineHelpText>Routing Order default</inlineHelpText>
        <label>Routing Order</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_DocuApi__UserId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the user recipient</description>
        <inlineHelpText>ID of the user recipient</inlineHelpText>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DocuSignDefaultRecipients2</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>DocuSign Recipient</label>
    <nameField>
        <displayFormat>DSDR-{0000000}</displayFormat>
        <label>Recipient Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DocuSign Recipients</pluralLabel>
    <recordTypes>
        <fullName>Apttus_DocuApi__Contact</fullName>
        <active>true</active>
        <description>Contact lookup</description>
        <label>Contact</label>
    </recordTypes>
    <recordTypes>
        <fullName>Apttus_DocuApi__Email</fullName>
        <active>true</active>
        <description>Manually entered recipient information</description>
        <label>Email</label>
    </recordTypes>
    <recordTypes>
        <fullName>Apttus_DocuApi__SigningGroup</fullName>
        <active>true</active>
        <description>DocuSign Signing Group</description>
        <label>Signing Group</label>
    </recordTypes>
    <recordTypes>
        <fullName>Apttus_DocuApi__User</fullName>
        <active>true</active>
        <description>User lookup</description>
        <label>User</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>